--- a/nephilim.online.creator.back/pom.xml
+++ b/nephilim.online.creator.back/pom.xml
@@ -15,6 +15,7 @@
 	<description>Nephilim Online Creator Backend</description>
 	<properties>
 		<java.version>17</java.version>
+		<assertj-core.version>3.23.1</assertj-core.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -41,10 +42,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj-core.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>**/*Should.java</include>
+					</includes>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
