--- a/nephilim.online.creator.back/pom.xml
+++ b/nephilim.online.creator.back/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<assertj-core.version>3.23.1</assertj-core.version>
+		<validation-api.version>2.0.1.Final</validation-api.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,6 +49,17 @@
 			<version>${assertj-core.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${validation-api.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+<!--			<version>6.0.13.Final</version>-->
+		</dependency>
+
 	</dependencies>
 
 	<build>
