--- a/nephilim.online.creator.back/src/main/resources/application.yml
+++ b/nephilim.online.creator.back/src/main/resources/application.yml
@@ -1,8 +1,15 @@
-
 spring:
   datasource:
     url: jdbc:h2:mem:memoryNOC
     driverClassName: org.h2.Driver
     username: sa
-    password: password
-  jpa.database-platform: org.hibernate.dialect.H2Dialect
+    password: "!moreComplexPasswordThanNeededForTests0"
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
+  h2:
+    console:
+      enabled: true
+management:
+  endpoints:
+    enabled-by-default: true
