lazy loading admin and creation menu (NOC-24, NOC-37,NOC-21,NOC-26)

--- a/nephilim.online.creator.back/pom.xml
+++ b/nephilim.online.creator.back/pom.xml
@@ -118,6 +118,7 @@
                 <configuration>
                     <includes>
                         <include>**/*Should.java</include>
+                        <argLine>-Dfile.encoding=UTF-8</argLine>
                     </includes>
                 </configuration>
             </plugin>
