--- a/nephilim.online.creator.front/package.json
+++ b/nephilim.online.creator.front/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.0.0",
     "@ngrx/effects": "14.3.2",
     "@ngrx/store": "^14.3.2",
+    "@ngrx/store-devtools": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -32,6 +33,8 @@
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
+    "jest": "^29.3.1",
+    "jest-preset-angular": "^12.2.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
