--- a/nephilim.online.creator.front/package.json
+++ b/nephilim.online.creator.front/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +32,7 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/jest": "^29.2.5",
     "jasmine-core": "~4.3.0",
     "jest": "^29.3.1",
     "jest-preset-angular": "^12.2.3",
