--- a/nephilim.online.creator.front/package.json
+++ b/nephilim.online.creator.front/package.json
@@ -23,6 +23,7 @@
     "@ngrx/effects": "14.3.2",
     "@ngrx/store": "^14.3.2",
     "@ngrx/store-devtools": "^15.0.0",
+    "jest-marbles": "^3.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
